# LLVM-Practive

./: .gitignore  CMakeLists.txt  HelloWorldPass.cpp  README.md
DominanceAnalysis/: CMakeLists.txt  DominatorTree.cpp  DominatorTree.h  IDominanceAnalysis.h  IterativeDominanceAnalysis.cpp  IterativeDominanceAnalysis.h  README.md  TestingPass.cpp
DominanceAnalysis/unittest/: tIterativeDominanceAnalysis.cpp
HelloWorld/: CMakeLists.txt  HelloWorldPass.cpp  README.md
SparseConditionalConstPropagation/: CMakeLists.txt  README.md  TestingPass.cpp
SparseConditionalConstPropagation/unittest/: tSccp.cpp
etc/: ConfigLLVM.cmake  DebugTarget.cmake  Unittest.cmake
